src/configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx_image
        imagePullPolicy: Never
        resources:
         limits:
          memory: 512Mi
          cpu: "1"
         requests:
          memory: 256Mi
          cpu: "0.2"
        ports:
        - containerPort: 8080
        - containerPort: 443
