src/configs/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx_image
    imagePullPolicy: Never
    resources:
        limits:
         memory: 512Mi
         cpu: "1"
        requests:
          memory: 256Mi
          cpu: "0.2"
    ports:
    - containerPort: 8080
    - containerPort: 443
